--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -12,10 +12,8 @@
 <div class="blue">123</div>
 <ul class="messages">
 <li *ngFor="let message of chat?.messages">
-  <div [ngClass]="(message.user.id == myId)?'red':'blue'">{{message.text}}{{message.user.id}}</div>
+  <div [ngClass]="(message.user.id == myId)?'red':'blue'">{{message.text}}</div>
 </li>
 </ul>
-<!--<form>-->
-  <input type="text" [(ngModel)]="messageText">
-  <button (click)="sendMessage()">send</button>
-<!--</form>-->
+<input type="text" [(ngModel)]="messageText">
+<button (click)="sendMessage()">send</button>
