--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,17 @@
 <!--{{user.username}}<br/>-->
 <!--{{user.password}}-->
 <div>
-  <label>username:
-    <input [(ngModel)]="username" placeholder="name"/>
-  </label>
-  <br/>
-<!--  <form n>-->
+  <fieldset>
+    <label>username:
+      <input [(ngModel)]="username" placeholder="name"/>
+    </label>
+    <br/>
+    <!--  <form n>-->
     <label>password:
-      <input [(ngModel)]="password" placeholder="password"/>
+      <input type="password" [(ngModel)]="password" placeholder="password"/>
     </label>
     <br/>
     <input type="submit" (click)="submit()">
-<!--  </form>-->
+  </fieldset>
+  <!--  </form>-->
 </div>
